--- a/Build_Mate_fe/src/Pages/ImageGeneration.css
+++ b/Build_Mate_fe/src/Pages/ImageGeneration.css
@@ -22,11 +22,11 @@
 
 .image-gen-wrapper {
   background-color: white;
-  padding: 40px;
+  padding: 20px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   /* width: 1100px; */
-  height: 400px;
-  border-radius: 100px;
+  height: 550px;
+  border-radius: 140px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -42,9 +42,9 @@
   color: #0d113e;
   margin-bottom: 5px;
   text-align: center;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-size: 40px;
-  line-height: 40px;
+  line-height: 50px;
 }
 
 .image-gen-wrapper h5 {
@@ -53,8 +53,14 @@
   font-size: 18px;
   font-weight: 500;
   text-align: center;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
-
+.image-gen-right{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 .prompt-input-field {
   width: 100%;
   padding: 14px;
@@ -91,7 +97,7 @@
   max-width: 100%;
   border-radius: 8px;
   border: 3px solid #0d113e;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 .error-message {
@@ -105,10 +111,11 @@
   font-size: 150px;
 }
 
-.imageGenForm {
+.imageGenForm input {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 400px;
 }
 
 .navImage {
@@ -181,6 +188,8 @@
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin-bottom: 20px;
+  margin-bottom: 90px;
 }
 
 .download-btn:hover {
@@ -189,7 +198,7 @@
   .image-gen-wrapper {
     background-color: white;
     padding: 40px;
-    border-radius: 15px;
+    border-radius: 30px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     width: 1000px;
   }
@@ -197,9 +206,6 @@
   .image-gen-wrapper h1 {
     color: #0d113e;
     margin-bottom: 10px;
-    
-    text-transform: uppercase;
-    font-size: 50px;
   }
   
   .image-gen-wrapper h5 {
